syntax="proto3";
package user;
option go_package = "pb/user;user";



message UserLoginReq {
  string email = 1;
  string password = 2;
}

message UserLoginResp {
  int64 code = 1;
  string msg = 2;
  string AccessToken = 3;
  string RefreshToken = 4;
  string email = 5;
}

message UserRegisterReq {
  string email = 1;
  string nick_name = 2;
  string password = 3;
}

message UserRegisterResp {
  int64 code = 1;
  string msg = 2;
  string AccessToken = 5;
  string RefreshToken = 6;
}

service UserService {
  rpc UserLogin(UserLoginReq) returns (UserLoginResp);
  rpc UserRegister(UserRegisterReq) returns (UserRegisterResp);
}